--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.6.0",
     "@nuxtjs/google-analytics": "^2.2.0",
+    "bootstrap": "3.3.4",
+    "jquery": "1.11.1",
     "lodash": "^4.17.15",
     "nuxt": "^2.0.0",
+    "vegas": "^2.4.4",
+    "vue-smoothscroll": "^0.2.0",
     "vue-social-sharing": "^2.4.6"
   },
   "devDependencies": {
