--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.6.0",
+    "@nuxtjs/sitemap": "^1.3.1",
     "bootstrap": "3.3.4",
     "jquery": "1.11.1",
     "lodash": "^4.17.15",
