--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "nuxt": "^2.0.0",
     "vegas": "^2.4.4",
     "vue-smoothscroll": "^0.2.0",
-    "vue-social-sharing": "^2.4.6"
+    "vue-social-sharing": "^2.4.6",
+    "vue-youtube": "^1.3.5"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
